# GeNT

./: .gitignore  arch.md  build.zig  readme.md  run.py  run.sh
config/: limine.cfg  linker.lds
kernel/: Cargo.toml  build.rs  linker.lds
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  dma.rs  lib.rs  main.rs  power.rs  uart.rs
kernel/src/arch/: global.rs  mod.rs
kernel/src/arch/riscv64/: csr.rs  mem.rs  mod.rs  paging.rs  transit.rs
kernel/src/dev/: fw_cfg.rs  mod.rs  ramfb.rs
kernel/src/mem/: mod.rs
src/: font.zig  framebuffer.zig  init.S  lib.zig  main.zig
src/io/framebuffer/: framebuffer.zig
src/io/uart/: serial.zig
src/io/writer/: stderr.zig  stdio.zig
src/libs/: limine.zig
src/mem/: pmm.zig
src/mem/virtual/: paging.zig
src/sys/: acpi.zig  bgrt.zig  fadt.zig  madt.zig  rhct.zig
